fix page header css styles on small screen + update featured api

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -84,6 +84,10 @@ main h1 {
   text-transform: capitalize;
 }
 
+.app--mobile main h1 {
+  font-size: 2.3em;
+}
+
 /*
 .app--mobile main h1 {
   padding-top: var(--header-height);
